# agent-auto-eval-azure-aoai-sk

./: .env.sample  .gitignore  README.md  pyproject.toml  sk_agent_scenario.py
